Finalizacion de clase 03

--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -3,8 +3,23 @@
     <head>
         <title>Tienda en linea</title>
         <meta charset="UTF-8">
+        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <header class="header">
+            <nav class="nav">
+                <a href="index.html" class="nav-link logo">Tech shop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a href="index.html" class="nav-menu-link nav-link">&LeftTriangleBar;</a>
+                    <li class="nav-menu-item"><a href="ejemplo3.html" class="nav-menu-link nav-link">&RightTriangleBar;</a>
+                    <li class="nav-menu-item"><a href="audios.html" class="nav-menu-link nav-link">Audios</a>
+                    <li class="nav-menu-item"><a href="videos.html" class="nav-menu-link nav-link">Videos</a>
+                    <li class="nav-menu-item"><a href="iframes.html" class="nav-menu-link nav-link">iFrames</a>
+                    <li class="nav-menu-item"><a href="formulario.html" class="nav-menu-link nav-link">Formularios</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <div>
             <h1 style="text-align: center;">Ejemplo2</h1>
             <p>Bienvenidos a la pagina en linea de la tienda</p>
@@ -16,7 +31,7 @@
             <p>Imperdiet ante taciti pulvinar feugiat sem tortor, egestas vitae ornare tellus semper, vestibulum sollicitudin torquent nam suspendisse. Dapibus litora vulputate dictumst accumsan sociosqu nulla id curabitur leo, hac fames feugiat inceptos nec ultricies urna venenatis nostra quam, nibh dictum magnis nam aliquet turpis donec aenean. Cum porta per metus class pretium euismod egestas sodales sapien a, nunc consequat vivamus semper tortor est quam nibh ultrices libero potenti, feugiat nec quisque dapibus phasellus bibendum auctor id at. Cras vulputate cubilia laoreet tortor potenti fermentum ultrices facilisi, erat netus inceptos enim lacus arcu pellentesque, posuere auctor interdum pharetra torquent vestibulum platea.</p>
 
         </div>
-        
+
         <br>
         <br>
 
