--- a/src/main/resources/static/ejemplo5.html
+++ b/src/main/resources/static/ejemplo5.html
@@ -3,8 +3,23 @@
     <head>
         <title>Tienda en linea</title>
         <meta charset="UTF-8">
+        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <header class="header">
+            <nav class="nav">
+                <a href="index.html" class="nav-link logo">Tech shop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a href="ejemplo4.html" class="nav-menu-link nav-link">&LeftTriangleBar;</a>
+                    <li class="nav-menu-item"><a href="ejemplo6.html" class="nav-menu-link nav-link">&RightTriangleBar;</a>
+                    <li class="nav-menu-item"><a href="audios.html" class="nav-menu-link nav-link">Audios</a>
+                    <li class="nav-menu-item"><a href="videos.html" class="nav-menu-link nav-link">Videos</a>
+                    <li class="nav-menu-item"><a href="iframes.html" class="nav-menu-link nav-link">iFrames</a>
+                    <li class="nav-menu-item"><a href="formulario.html" class="nav-menu-link nav-link">Formularios</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <h1>Ejemplos de formateo de texto</h1>
         <p>Lorem ipsum dolor<span style="font-family: Comic Sans MS;font-size: 26px;background-color: blue;color: white">sit amet consectetur adipiscing elit euismod ullamcorper hac proin maecenas, nam purus inceptos rutrum nulla pellentesque mus congue phasellus ridiculus. Parturient praesent rhoncus vivamus cursus sem euismod tristique sapien nostra, phasellus etiam cubilia ac facilisi proin penatibus feugiat, molestie fermentum suscipit per erat himenaeos nulla augue. Sed habitasse dui non euismod duis imperdiet iaculis auctor magnis, potenti mus facilisis pulvinar morbi eleifend tristique magna, ultricies laoreet parturient cursus purus feugiat pretium ridiculus.</p>
         <p>La formula del agua es: H<sub>2</sub>0</p>
