--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,17 +6,23 @@
         <meta name="descripcion" content="Pagina de leccion 2"/>
         <meta name="keywords" content="html5, css3, web, fidelitas"/>
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
+        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <header id="encabezado">
-            <h1>Tienda en linea</h1>
-            <br>
+        <header class="header">
+            <nav class="nav">
+                <a href="index.html" class="nav-link logo">Tech shop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a href="ejemplo9.html" class="nav-menu-link nav-link">&LeftTriangleBar;</a>
+                    <li class="nav-menu-item"><a href="ejemplo2.html" class="nav-menu-link nav-link">&RightTriangleBar;</a>
+                    <li class="nav-menu-item"><a href="audios.html" class="nav-menu-link nav-link">Audios</a>
+                    <li class="nav-menu-item"><a href="videos.html" class="nav-menu-link nav-link">Videos</a>
+                    <li class="nav-menu-item"><a href="iframes.html" class="nav-menu-link nav-link">iFrames</a>
+                    <li class="nav-menu-item"><a href="formulario.html" class="nav-menu-link nav-link">Formularios</a>  
+                    </li>
+                </ul>
+            </nav>
         </header>
-        <nav id="menu">
-            <a href="ejemplo9.html">Atras</a>
-            <a href="index.html">Home</a>
-            <a href="ejemplo2.html">Adelante</a>
-        </nav>
         <aside id="barraLateral">
             <h2>Productos mas vendidos</h2>
             <p>
