--- a/src/main/resources/static/ejemplo7.html
+++ b/src/main/resources/static/ejemplo7.html
@@ -3,8 +3,23 @@
     <head>
         <title>Tienda en linea</title>
         <meta charset="UTF-8">
+        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <header class="header">
+            <nav class="nav">
+                <a href="index.html" class="nav-link logo">Tech shop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a href="ejemplo6.html" class="nav-menu-link nav-link">&LeftTriangleBar;</a>
+                    <li class="nav-menu-item"><a href="ejemplo8.html" class="nav-menu-link nav-link">&RightTriangleBar;</a>
+                    <li class="nav-menu-item"><a href="audios.html" class="nav-menu-link nav-link">Audios</a>
+                    <li class="nav-menu-item"><a href="videos.html" class="nav-menu-link nav-link">Videos</a>
+                    <li class="nav-menu-item"><a href="iframes.html" class="nav-menu-link nav-link">iFrames</a>
+                    <li class="nav-menu-item"><a href="formulario.html" class="nav-menu-link nav-link">Formularios</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <a name="arriba"></a>
         <a href="#abajo">Ir abajo</a>
         
